adds basic tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /system/user/addons/grid_pagination.zip
+/system/user/addons/grid_pagination/Tests/logs/junit.xml
+/system/user/addons/grid_pagination/Tests/logs/logfile.txt
+/system/user/addons/grid_pagination/Tests/logs/teamcity.txt
+/system/user/addons/grid_pagination/Tests/logs/testdox.html
+/system/user/addons/grid_pagination/Tests/logs/testdox.txt
+/system/user/addons/grid_pagination/Tests/logs/testdox.xml
