--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /system/user/addons/grid_pagination/Tests/logs/testdox.html
 /system/user/addons/grid_pagination/Tests/logs/testdox.txt
 /system/user/addons/grid_pagination/Tests/logs/testdox.xml
+/system/user/addons/grid_pagination/Tests/.phpunit.result.cache
